# MoviaVentaAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  MOVIA_3_1.md  PLAN.md  PLANV2.md  PLAN_ANALYZER_V3.md  PLAN_REQUIREMENT_SEMANTICS_V3_1.md  PLAN_V3.md  README.md  docker-compose.redis.yml  docker-compose.yml  pyproject.toml
frontend/: app.js  index.html  styles.css
movia_validation_package/: analyzer_model_benchmark_v1.json  analyzer_v3_targeted_manifest.json  movia_adaptive_hybrid_predeploy_interface.json  movia_coherent_scripted_conversations.json  movia_contract_v3_2_vulnerability_audit.json  movia_difficult_lead_validation_scenarios.json  movia_phase4_supplementary_manifest.json  movia_phase4_supplementary_scenarios.json  movia_production_contract_regression_v1.json  movia_validation_plan.md  movia_validation_readme.md  response_quality_calibration.json
platform_registry/: agents.json
scripts/: analyzer_model_benchmark.py  apply_migrations.py  ingest_rag.py  seed_database.py  sync_platform_registry.py
tests/: test_adaptive_hybrid.py  test_agent_policy.py  test_analyzer_contract_v3.py  test_analyzer_normalization_v3.py  test_analyzer_targeted_v3.py  test_api.py  test_commercial_contract.py  test_contextual_reply_resolution.py  test_evaluation.py  test_followup_scheduler.py  test_ingestion.py  test_interactive_policy.py  test_memory_v3.py  test_meta_conversions.py  test_objection_flow.py  test_paths.py  test_phase4_supplementary.py  test_phase6.py  test_platform_observability.py  test_production_contract_regression.py  test_rag_v3.py  (+7 more)
(+167 files in other folders)
