[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movia-sales-agent"
version = "0.1.0"
description = "MovIA conversational pre-sales agent with LangGraph, Supabase, RAG, and WhatsApp webhook."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "openai>=1.57.0",
  "langgraph>=0.2.60",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
  "supabase>=2.10.0",
  "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "respx>=0.21.0",
  "ruff>=0.8.0",
]
eval = [
  "ragas==0.4.3",
  "deepeval==4.0.3",
  "eval-type-backport>=0.2.0; python_version < '3.10'",
]

[project.scripts]
movia-api = "movia_sales_agent.api.main:run"
movia-eval = "movia_sales_agent.evaluation.cli:main"
movia-platform-sync = "movia_sales_agent.platform.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"
